# h2mm

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: build-exe.yaml
MOD_EXAMPLE/: manifest.json
src/h2mm/: __main__.py  etc.py  mgr.py  model.py  utils.py
