[project]
name = "h2mm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cel-ti", email = "96926560+cel-ti@users.noreply.github.com" }
]
dependencies = [
    "click>=8.1.7",
    "toml>=0.10.2",
    "rarfile>=4.2",
    "wcwidth>=0.2.13",
    "tabulate>=0.9.0",
]

readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
h2mm = "h2mm.__main__:cli"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.11.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/h2mm"]
